<resources>
    <string name="app_name">Aprendendo Libras</string>
    <string name="emaillogin">Digite seu email</string>
    <string name="senhalogin">Digite sua senha</string>
    <string name="descricao_login">Insira seu Email e Senha</string>
    <string name="titulo_login">Bem Vindo</string>
    <string name="btnLogin">Entrar</string>
    <string name="deseja_criar_conta">Deseja Criar Conta?</string>
    <string name="nome">Digite seu Nome</string>
    <string name="nomeCriarConta">Nome</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="bem_vindo">Bem VIndo</string>
    <string name="bem_vindo_titulo">Bem Vindo\nao\n</string>
    <string name="notValidEmail">Por favor, insira um email válido.</string>
    <string name="notValidLogin"> Email ou senha inválido.</string>
    <string name="vazio"> Preencha todos campos corretamente</string>
    <string name="emailCadastrado"> Desculpe Email já Cadastrado</string>
    <string name="logo">logo</string>
    <string name="textoDescJogoLibras">  Este aplicativo tem como um objetivo facilitar seu aprendizado na linguagem de libras, consiste em uma pergunta e o você seleciona a imagem correta, no fim você terá uma pontuação de acordo com as respostas certas.</string>
    <string name="tituloRank">Melhores Jogadores</string>
    <string name="pergunta">Pergunta</string>
    <string name="se_ainda_n_o_possui_uma_conta_ativa_ent_o_crie_agora">Se ainda não possui uma conta ativa, então crie agora.</string>

</resources>